# template-rust-mcp-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix  justfile  pyproject.toml  setup.sh  smithery.yaml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  release.yaml
src/: config.rs  errors.rs  lib.rs  main.rs  server.rs
