[package]
name = "REPLACE_ME"
version = "0.1.0"
edition = "2024"
description = "REPLACE_ME_DESCRIPTION"
license = "MIT"
repository = "https://github.com/REPLACE_ME_GITHUB_OWNER/REPLACE_ME"
readme = "README.md"
keywords = ["mcp"]
categories = ["command-line-utilities"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
